syntax = "proto3";

package tasks;

option go_package = "github.com/zubans/task-tracker/proto";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
}

message Task {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string status = 3;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTasksRequest {}

message GetTasksResponse {
  repeated Task tasks = 1;
}